--- a/app/src/main/res/layout/activity_add_story.xml
+++ b/app/src/main/res/layout/activity_add_story.xml
@@ -37,103 +37,127 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
-    <LinearLayout
-        android:id="@id/container"
+    <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/topAppBar"
-        tools:ignore="MissingConstraints">
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/topAppBar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingTop="15dp"
+        android:fillViewport="true">
 
-        <ImageView
-            android:id="@+id/iv_add_photo"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_image"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"
-            android:layout_marginTop="16dp"
-            android:contentDescription="@string/add_image" />
+            android:orientation="vertical"
+            android:paddingBottom="30dp">
 
-        <EditText
-            android:id="@+id/ed_add_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autofillHints=""
-            android:hint="@string/description"
-            android:inputType="textMultiLine"
-            android:textColorHint="@color/abu_hint"
-            android:textColor="@color/black"
-            android:alpha="0"
-            android:minLines="3"
-            android:maxLines="5"
-            tools:alpha="100" />
+            <LinearLayout
+                android:id="@id/container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/topAppBar"
+                tools:ignore="MissingConstraints">
 
-    </LinearLayout>
+                <ImageView
+                    android:id="@+id/iv_add_photo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_image"
+                    android:scaleType="centerCrop"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@string/add_image" />
 
-    <LinearLayout
-        android:id="@+id/button_container"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/container"
-        android:weightSum="2"
-        tools:ignore="MissingConstraints">
+                <EditText
+                    android:id="@+id/ed_add_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:autofillHints=""
+                    android:hint="@string/description"
+                    android:inputType="textMultiLine"
+                    android:textColorHint="@color/abu_hint"
+                    android:textColor="@color/black"
+                    android:alpha="0"
+                    android:minLines="3"
+                    android:maxLines="5"
+                    tools:alpha="100" />
 
-        <Button
-            android:id="@+id/button_add_gallery"
-            android:layout_width="0dp"
-            android:layout_height="55dp"
-            android:layout_weight="1"
-            android:alpha="0"
-            android:layout_marginEnd="3dp"
-            android:backgroundTint="@color/blue"
-            android:text="@string/gallery_button"
-            android:textColor="@color/whiteBG"
-            tools:alpha="100"
-            tools:ignore="ButtonStyle" />
+            </LinearLayout>
 
-        <Button
-            android:id="@+id/button_add_camera"
-            android:layout_width="0dp"
-            android:layout_height="55dp"
-            android:layout_weight="1"
-            android:layout_marginStart="3dp"
-            android:alpha="0"
-            android:backgroundTint="@color/blue"
-            android:text="@string/camera_button"
-            android:textColor="@color/whiteBG"
-            tools:alpha="100"
-            tools:ignore="ButtonStyle" />
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/button_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/container"
+                android:weightSum="2"
+                tools:ignore="MissingConstraints">
 
-    <Button
-        android:id="@+id/button_add"
-        android:layout_width="0dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="15dp"
-        android:alpha="0"
-        android:backgroundTint="@color/blue"
-        android:text="@string/add_story"
-        android:textColor="@color/whiteBG"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_container"
-        tools:alpha="100" />
+                <Button
+                    android:id="@+id/button_add_gallery"
+                    android:layout_width="0dp"
+                    android:layout_height="55dp"
+                    android:layout_weight="1"
+                    android:alpha="0"
+                    android:layout_marginEnd="3dp"
+                    android:backgroundTint="@color/blue"
+                    android:text="@string/gallery_button"
+                    android:textColor="@color/whiteBG"
+                    tools:alpha="100"
+                    tools:ignore="ButtonStyle" />
 
-    <include
-        android:id="@+id/loading_layout"
-        layout="@layout/loading_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone" />
+                <Button
+                    android:id="@+id/button_add_camera"
+                    android:layout_width="0dp"
+                    android:layout_height="55dp"
+                    android:layout_weight="1"
+                    android:layout_marginStart="3dp"
+                    android:alpha="0"
+                    android:backgroundTint="@color/blue"
+                    android:text="@string/camera_button"
+                    android:textColor="@color/whiteBG"
+                    tools:alpha="100"
+                    tools:ignore="ButtonStyle" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/button_add"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="15dp"
+                android:alpha="0"
+                android:backgroundTint="@color/blue"
+                android:text="@string/add_story"
+                android:textColor="@color/whiteBG"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/button_container"
+                tools:alpha="100" />
+        </LinearLayout>
+    </ScrollView>
+
+    <ProgressBar
+        android:id="@+id/loadingIndicator"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_centerInParent="true"
+        android:indeterminateTint="@color/blue"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/scrollView"
+        app:layout_constraintEnd_toEndOf="@+id/scrollView"
+        app:layout_constraintStart_toStartOf="@+id/scrollView"
+        app:layout_constraintTop_toTopOf="@+id/scrollView"
+        tools:ignore="MissingConstraints"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
